@startuml

title __FRAGMENTS's Class Diagram__\n

  namespace com.ferllop.evermind {
    namespace activities {
      namespace fragments {
        class com.ferllop.evermind.activities.fragments.DeleteCardDialogFragment {
            ~ cardID : String
            + DeleteCardDialogFragment()
            + onAttach()
            + onCreateDialog()
        }
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace activities {
      namespace fragments {
        interface com.ferllop.evermind.activities.fragments.DeleteCardDialogFragment.DeleteDialogListener {
            {abstract} + onDeleteDialogConfirmClick()
            {abstract} + onDialogCancelClick()
        }
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace activities {
      namespace fragments {
        class com.ferllop.evermind.activities.fragments.SearchInfoDialog {
            + onAttach()
            + onCreateDialog()
        }
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace activities {
      namespace fragments {
        class com.ferllop.evermind.activities.fragments.SearchResultsFragment {
            {static} - CARDS_ID : String
            {static} - SEARCH_QUERY : String
            {static} - TAG : String
            - cardsID : String[]
            - searchQuery : String
            + SearchResultsFragment()
            {static} + newInstance()
            {static} + newInstance()
            + onAttach()
            + onCreate()
            + onCreateView()
            + onDelete()
            + onError()
            + onLoad()
            + onLoad()
            + onLoadAllCards()
            + onLoadAllSubscriptions()
            + onSave()
            + onSave()
            + onViewCreated()
            + subscribeToAll()
            - execute()
            - executeSearch()
            - hideKeyboard()
            - loadCards()
        }
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace activities {
      namespace fragments {
        interface com.ferllop.evermind.activities.fragments.SearchResultsFragment.OnSearchHaveResults {
            {abstract} + cardsCount()
            {abstract} + onSubscriptionUpdate()
        }
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace activities {
      namespace fragments {
        class com.ferllop.evermind.activities.fragments.VerifyEmailDialog {
            ~ message : String
            + VerifyEmailDialog()
            + onAttach()
            + onCreateDialog()
        }
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace activities {
      namespace fragments {
        interface com.ferllop.evermind.activities.fragments.VerifyEmailDialog.VerifyEmailDialogListener {
            {abstract} + onOk()
        }
      }
    }
  }
  

  com.ferllop.evermind.activities.fragments.DeleteCardDialogFragment -up-|> androidx.fragment.app.DialogFragment
  com.ferllop.evermind.activities.fragments.DeleteCardDialogFragment o-- com.ferllop.evermind.activities.fragments.DeleteCardDialogFragment.DeleteDialogListener : listener
  com.ferllop.evermind.activities.fragments.DeleteCardDialogFragment +-down- com.ferllop.evermind.activities.fragments.DeleteCardDialogFragment.DeleteDialogListener
  com.ferllop.evermind.activities.fragments.SearchInfoDialog -up-|> androidx.fragment.app.DialogFragment
  com.ferllop.evermind.activities.fragments.SearchResultsFragment .up.|> com.ferllop.evermind.repositories.listeners.CardDataStoreListener
  com.ferllop.evermind.activities.fragments.SearchResultsFragment .up.|> com.ferllop.evermind.repositories.listeners.SubscriptionDataStoreListener
  com.ferllop.evermind.activities.fragments.SearchResultsFragment -up-|> androidx.fragment.app.Fragment
  com.ferllop.evermind.activities.fragments.SearchResultsFragment o-- com.ferllop.evermind.activities.CardsAdapter : adapter
  com.ferllop.evermind.activities.fragments.SearchResultsFragment o-- com.ferllop.evermind.repositories.CardRepository : cardRepository
  com.ferllop.evermind.activities.fragments.SearchResultsFragment o-- com.ferllop.evermind.activities.fragments.SearchResultsFragment.OnSearchHaveResults : listener
  com.ferllop.evermind.activities.fragments.SearchResultsFragment +-down- com.ferllop.evermind.activities.fragments.SearchResultsFragment.OnSearchHaveResults
  com.ferllop.evermind.activities.fragments.VerifyEmailDialog -up-|> androidx.fragment.app.DialogFragment
  com.ferllop.evermind.activities.fragments.VerifyEmailDialog o-- com.ferllop.evermind.activities.fragments.VerifyEmailDialog.VerifyEmailDialogListener : listener
  com.ferllop.evermind.activities.fragments.VerifyEmailDialog +-down- com.ferllop.evermind.activities.fragments.VerifyEmailDialog.VerifyEmailDialogListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
